--- a/Tests/EventBuffer.ipynb
+++ b/Tests/EventBuffer.ipynb
@@ -13,6 +13,23 @@
       "The file `config.json` does not exist.\n",
       "Loaded config file: /Users/bowenxu/Codes/pynars/Tests/../pynars/config.json\n"
      ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Buffer' from partially initialized module 'pynars.NARS.DataStructures' (most likely due to a circular import) (/Users/bowenxu/Codes/pynars/Tests/../pynars/NARS/DataStructures/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/Users/bowenxu/Codes/pynars/Tests/EventBuffer.ipynb Cell 1\u001b[0m in \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bowenxu/Codes/pynars/Tests/EventBuffer.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m; sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39m..\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m..\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m sys\u001b[39m.\u001b[39mpath \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/bowenxu/Codes/pynars/Tests/EventBuffer.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNARS\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mDataStructures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mEventBuffer\u001b[39;00m \u001b[39mimport\u001b[39;00m EventBuffer\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bowenxu/Codes/pynars/Tests/EventBuffer.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNarsese\u001b[39;00m \u001b[39mimport\u001b[39;00m Term, Task, Judgement\n",
+      "File \u001b[0;32m~/Codes/pynars/Tests/../pynars/NARS/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mControl\u001b[39;00m \u001b[39mimport\u001b[39;00m Reasoner\n",
+      "File \u001b[0;32m~/Codes/pynars/Tests/../pynars/NARS/Control/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mReasoner\u001b[39;00m \u001b[39mimport\u001b[39;00m Reasoner\n",
+      "File \u001b[0;32m~/Codes/pynars/Tests/../pynars/NARS/Control/Reasoner.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mos\u001b[39;00m \u001b[39mimport\u001b[39;00m remove\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNAL\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mFunctions\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mTools\u001b[39;00m \u001b[39mimport\u001b[39;00m truth_to_quality\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNARS\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mDataStructures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mChannel\u001b[39;00m \u001b[39mimport\u001b[39;00m Channel\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNARS\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mDataStructures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mLink\u001b[39;00m \u001b[39mimport\u001b[39;00m TaskLink\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNARS\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mInferenceEngine\u001b[39;00m \u001b[39mimport\u001b[39;00m TemporalEngine\n",
+      "File \u001b[0;32m~/Codes/pynars/Tests/../pynars/NARS/DataStructures/__init__.py:8\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m      5\u001b[0m     \u001b[39m# import from _py\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     \u001b[39m# from ._py import *\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m_py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBag\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m----> 8\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m_py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBuffer\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      9\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m_py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mChannel\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     10\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m_py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mConcept\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
+      "File \u001b[0;32m~/Codes/pynars/Tests/../pynars/NARS/DataStructures/_py/Buffer.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNAL\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mFunctions\u001b[39;00m \u001b[39mimport\u001b[39;00m Stamp_merge, Budget_merge, Truth_induction, Truth_deduction, Budget_forward\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNAL\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mInference\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mLocalRules\u001b[39;00m \u001b[39mimport\u001b[39;00m revision\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNARS\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mDataStructures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mAnticipation\u001b[39;00m \u001b[39mimport\u001b[39;00m Anticipation\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNARS\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mDataStructures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mSlot\u001b[39;00m \u001b[39mimport\u001b[39;00m Slot\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNarsese\u001b[39;00m \u001b[39mimport\u001b[39;00m Compound, Task, Judgement, Interval, Statement, Copula, Goal, Term, Connector\n",
+      "File \u001b[0;32m~/Codes/pynars/Tests/../pynars/NARS/DataStructures/_py/Anticipation.py:5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNarsese\u001b[39;00m \u001b[39mimport\u001b[39;00m Task, parser, Judgement, Truth, Budget\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNAL\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mInference\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mLocalRules\u001b[39;00m \u001b[39mimport\u001b[39;00m revision\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpynars\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mNARS\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mDataStructures\u001b[39;00m \u001b[39mimport\u001b[39;00m Buffer\n\u001b[1;32m      8\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mAnticipation\u001b[39;00m:\n\u001b[1;32m      9\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[39m    Anticipation is the anticipation made by some predictions, e.g., (A, A=/>B |- B)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39m    It contains two parts:\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[39m        1) the body of the anticipation, which is a task,\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[39m        2) the prediction makes this anticipation, which is used for updating when the first part is satisfied/unsatisfied\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Buffer' from partially initialized module 'pynars.NARS.DataStructures' (most likely due to a circular import) (/Users/bowenxu/Codes/pynars/Tests/../pynars/NARS/DataStructures/__init__.py)"
+     ]
     }
    ],
    "source": [
@@ -23,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,29 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([<Table: #items=0, capacity=5>, <Table: #items=0, capacity=5>,\n",
-       "       <Table: #items=0, capacity=5>, <Table: #items=0, capacity=5>,\n",
-       "       <Table: #items=0, capacity=5>], dtype=object)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "eb.slots.future"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,65 +78,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Term: D>,\n",
-       " <Compound: (&/, C, D)>,\n",
-       " <Compound: (&/, B, C, D)>,\n",
-       " <Compound: (&/, A, B, C, D)>]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "eb.combination()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Term: C>, <Compound: (&/, B, C)>, <Compound: (&/, A, B, C)>]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "eb.combination(1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/bowenxu/Codes/pynars/Tests/EventBuffer.ipynb Cell 8\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/bowenxu/Codes/pynars/Tests/EventBuffer.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m eb\u001b[39m.\u001b[39;49mgenerate_predictions()\n",
-      "File \u001b[0;32m~/Codes/pynars/Tests/../pynars/NARS/DataStructures/_py/EventBuffer/EventBuffer.py:50\u001b[0m, in \u001b[0;36mEventBuffer.generate_predictions\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     48\u001b[0m term \u001b[39m=\u001b[39m event\u001b[39m.\u001b[39mterm   \n\u001b[1;32m     49\u001b[0m predictions \u001b[39m=\u001b[39m []\n\u001b[0;32m---> 50\u001b[0m \u001b[39mfor\u001b[39;00m compound \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(compounds):\n\u001b[1;32m     51\u001b[0m     prediction \u001b[39m=\u001b[39m Task(Judgement(Statement\u001b[39m.\u001b[39mPredictiveImplication(compound, term)))\n\u001b[1;32m     52\u001b[0m     predictions\u001b[39m.\u001b[39mappend(prediction)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "eb.generate_predictions()"
    ]
